
CHANGES IN VERSION 1.2.3 (under construction)
------------------------

NEW FEATURES

	o mouse gene annotations
	o new functions: 'plot_odds_ratios' and ('plot_scores')

MINOR CHANGES

	o genes in go_enrich(...)[[2]] are sorted alphabetically
	  (mixedsort)


CHANGES IN VERSION 1.2.2
------------------------

NEW FEATURES

	o new functions: 'get_child_nodes' and 'get_parent_nodes'

SIGNIFICANT USER-LEVEL CHANGES

	o change name of function 'get_GO_names' to 'get_names'	


CHANGES IN VERSION 1.2.1
------------------------

NEW FEATURES

	o additional output:
	  expected and real no. of annotated candidate
	  genes per GO (hypergeometric test) and
	  expected and real sum of ranks of annotated
	  genes (wilcoxon rank-sum test)


CHANGES IN VERSION 1.2.0
------------------------

NEW FEATURES

	o new function: 'get_anno_genes' returns genes 
	  annotated to enriched or user defined GOs	


CHANGES IN VERSION 1.1.2
------------------------

BUG FIXES

	o mulitply tolerance for FWER calculation
	  with p-value

NEW FEATURES

	o in addition to FWERS, return genes
	  (output now is list of 2)

IMPROVEMENTS
	  
	o warn if user-defined genes have no coordinates
	  (when gene_len==TRUE)
	o improve handling of large genomic coordinates  
	o check that FWER-order follows p-value order


CHANGES IN VERSION 1.1.1
------------------------

BUG FIXES

	o add tolerance for FWER calculation


CHANGES IN VERSION 1.1.0
------------------------

NEW FEATURES

	o accept genomic regions as input
	o circ_chrom and gene_len option like in ABAEnrichment
	o new function: get_GO_names(GO-IDs), 
	  also returning GO-domain